--- a/colors-scheme/4-colors-schemes.css
+++ b/colors-scheme/4-colors-schemes.css
@@ -1,91 +1,91 @@
-/*! Websites Kit v8.0.1 | MIT License | github.com/OsamaHu1277/Osmx-Websites-Kit */
+/*! Websites Kit | MIT License | github.com/itsosmx/Osmx-Websites-Kit */
 
 /* Compote */
 
 :root {
-    --A-Compote: #934A5F;
-    --B-Compote: #57648C;
-    --C-Compote: #C2B4D6;
-    --D-Compote: #E5E5E5;
+    --A-4-Compote: #934A5F;
+    --B-4-Compote: #57648C;
+    --C-4-Compote: #C2B4D6;
+    --D-4-Compote: #E5E5E5;
 }
 
 /* Scholar */
 
 :root {
-    --A-Scholar: #333D51;
-    --B-Scholar: #D3AC2B;
-    --C-Scholar: #CBD0D8;
-    --D-Scholar: #F4F3EA;
+    --A-4-Scholar: #333D51;
+    --B-4-Scholar: #D3AC2B;
+    --C-4-Scholar: #CBD0D8;
+    --D-4-Scholar: #F4F3EA;
 }
 
 /* Harbor */
 
 :root {
-    --A-Harbor: #354649;
-    --B-Harbor: #6C7A89;
-    --C-Harbor: #A3C6C4;
-    --D-Harbor: #E0E7E9;
+    --A-4-Harbor: #354649;
+    --B-4-Harbor: #6C7A89;
+    --C-4-Harbor: #A3C6C4;
+    --D-4-Harbor: #E0E7E9;
 }
 
 /* Gecko */
 
 :root {
-    --A-Gecko: #9F4298;
-    --B-Gecko: #CFDB31;
-    --C-Gecko: #D1AFD3;
-    --D-Gecko: #E6E7E8;
+    --A-4-Gecko: #9F4298;
+    --B-4-Gecko: #CFDB31;
+    --C-4-Gecko: #D1AFD3;
+    --D-4-Gecko: #E6E7E8;
 }
 
 /* Brisk */
 
 :root {
-    --A-Brisk: #4C4556;
-    --B-Brisk: #872642;
-    --C-Brisk: #F6C026;
-    --D-Brisk: #A0D3F9;
+    --A-4-Brisk: #4C4556;
+    --B-4-Brisk: #872642;
+    --C-4-Brisk: #F6C026;
+    --D-4-Brisk: #A0D3F9;
 }
 
 /* Pebble */
 
 :root {
-    --A-Pebble: #433E49;
-    --B-Pebble: #928490;
-    --C-Pebble: #DBC1AD;
-    --D-Pebble: #F3E8EB;
+    --A-4-Pebble: #433E49;
+    --B-4-Pebble: #928490;
+    --C-4-Pebble: #DBC1AD;
+    --D-4-Pebble: #F3E8EB;
 }
 
 /* Condiments */
 
 :root {
-    --A-Condiments: #E2495B;
-    --B-Condiments: #C4BA3B;
-    --C-Condiments: #F4ED6E;
-    --D-Condiments: #FFFEE6;
+    --A-4-Condiments: #E2495B;
+    --B-4-Condiments: #C4BA3B;
+    --C-4-Condiments: #F4ED6E;
+    --D-4-Condiments: #FFFEE6;
 }
 
 /* Harvest */
 
 :root {
-    --A-Harvest: #8E7C68;
-    --B-Harvest: #ED7458;
-    --C-Harvest: #FFDC9F;
-    --D-Harvest: #DDC9BC;
+    --A-4-Harvest: #8E7C68;
+    --B-4-Harvest: #ED7458;
+    --C-4-Harvest: #FFDC9F;
+    --D-4-Harvest: #DDC9BC;
 }
 
 /* Uncorked */
 
 :root {
-    --A-Uncorked: #7F056E;
-    --B-Uncorked: #C09247;
-    --C-Uncorked: #CAB387;
-    --D-Uncorked: #F2EBE0;
+    --A-4-Uncorked: #7F056E;
+    --B-4-Uncorked: #C09247;
+    --C-4-Uncorked: #CAB387;
+    --D-4-Uncorked: #F2EBE0;
 }
 
 /* Scuba */
 
 :root {
-    --A-Scuba: #0C4A60;
-    --B-Scuba: #EF6C33;
-    --C-Scuba: #ABDFF1;
-    --D-Scuba: #E1DDDB;
+    --A-4-Scuba: #0C4A60;
+    --B-4-Scuba: #EF6C33;
+    --C-4-Scuba: #ABDFF1;
+    --D-4-Scuba: #E1DDDB;
 }
