--- a/css-reset/reset.css
+++ b/css-reset/reset.css
@@ -1,13 +1,12 @@
 /*! Websites Kit | MIT License | github.com/itsosmx/Osmx-Websites-Kit */
-
-/* Using normalize.css  v8.0.1 | github.com/necolas/normalize.css */
+/* Using some normalize.css  v8.0.1 | github.com/necolas/normalize.css */
 
 html {
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
 }
 
-* {
+*, *::after, *::before {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -60,9 +59,7 @@ textarea {
 
 [type="search"] {
     -webkit-appearance: textfield;
-    /* 1 */
     outline-offset: -2px;
-    /* 2 */
 }
 
 [type="number"]::-webkit-inner-spin-button, [type="number"]::-webkit-outer-spin-button {
