--- a/css-reset/reset.css
+++ b/css-reset/reset.css
@@ -1,4 +1,5 @@
 /*! Websites Kit | MIT License | github.com/itsosmx/Osmx-Websites-Kit */
+
 /* Using some normalize.css  v8.0.1 | github.com/necolas/normalize.css */
 
 html {
@@ -23,11 +24,12 @@ hr {
 }
 
 a {
-    background-color: transparent;
+    text-decoration: none;
 }
 
 img {
     border-style: none;
+    display: block;
 }
 
 button, input, optgroup, select, textarea {
