--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 :root {
-    --Cairo: 'Cairo', sans-serif;
-    --Ubuntu: 'Ubuntu', sans-serif;
-    --Roboto: 'Roboto', sans-serif;
+    --ox-cairo: 'Cairo', sans-serif;
+    --ox-ubuntu: 'Ubuntu', sans-serif;
+    --ox-roboto: 'Roboto', sans-serif;
+    --ox-poppins: 'Poppins', sans-serif; /* favorite */
 }
