Update `Package` name

--- a/colors/5-colors-schemes.css
+++ b/colors/5-colors-schemes.css
@@ -1,4 +1,4 @@
-/*! Websites Kit | MIT License | github.com/itsosmx/Osmx-Websites-Kit */
+/*! Websites Kit | MIT License | github.com/itsosmx/website-kit */
 
 
 /* Grosse */
