--- a/reset/reset.css
+++ b/reset/reset.css
@@ -1,4 +1,4 @@
-/*! Websites Kit | MIT License | github.com/itsosmx/Osmx-Websites-Kit */
+/*! Websites Kit | MIT License | github.com/itsosmx/website-kit */
 
 /* Using some normalize.css  v8.0.1 | github.com/necolas/normalize.css */
 
