--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,3 +1,5 @@
+/*! Websites Kit | MIT License | github.com/itsosmx/website-kit */
+
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
